meta name viewport

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width">
     <title>The Truth Post</title>
     <link href="stylesheets/styles.scss" rel="stylesheet"/>
     <script src="index.jsx" type="module"></script>
