description meta tag

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width">
+    <meta name="description" content="Accurate and relevant news.">
     <title>The Truth Post</title>
     <link href="stylesheets/styles.scss" rel="stylesheet"/>
     <script src="index.jsx" type="module"></script>
